--- a/docs/self-hosted/index.mdx
+++ b/docs/self-hosted/index.mdx
@@ -58,6 +58,7 @@ Run DeployStack on your own infrastructure for maximum control, security, and cu
 - **Data Sovereignty**: Keep all your MCP server configurations and deployment data within your infrastructure
 - **Custom Integrations**: Integrate with your existing CI/CD pipelines and infrastructure tools
 - **Network Security**: Deploy within your private network with custom firewall rules
+- **Satellite Deployment**: Run edge workers for MCP server management with team isolation
 
 ### Enterprise Features
 - **Single Sign-On**: Integrate with your organization's authentication systems
