--- a/docs/development/satellite/index.mdx
+++ b/docs/development/satellite/index.mdx
@@ -13,7 +13,7 @@ DeployStack Satellites are **edge workers** (similar to GitHub Actions runners) 
 
 ## Current Implementation Status
 
-The satellite service has completed **Phase 1: MCP Transport Implementation** with working external client interfaces:
+:The satellite service has completed
 
 - ✅ **Fastify HTTP Server** with Swagger API documentation
 - ✅ **Pino Logging System** identical to backend configuration
@@ -22,10 +22,12 @@ The satellite service has completed **Phase 1: MCP Transport Implementation** wi
 - ✅ **JSON-RPC 2.0 Protocol** compliance for MCP communication
 - ✅ **TypeScript + Webpack** build system with full type safety
 - ✅ **Development Workflow** with hot reload and linting
-- ✅ **Backend Communication** (polling, commands, heartbeat)
+- ✅ **Backend Communication** (polling, commands, heartbeat with team-grouped processes)
 - ✅ **OAuth 2.1 Authentication** (token introspection, team context)
-- 🚧 **MCP Server Process Management** (ready for implementation)
-- 🚧 **Team Isolation with nsjail** (ready for implementation)
+- ✅ **stdio MCP Server Process Management** (spawn, monitor, auto-restart, terminate)
+- ✅ **Team Isolation** (environment-based: nsjail in production, plain spawn in dev)
+- ✅ **Auto-Restart Protection** (max 3 attempts, permanently_failed status)
+- ✅ **Tool Discovery** (HTTP and stdio MCP servers)
 
 ## Architecture Vision
 
@@ -218,14 +220,16 @@ curl -X POST http://localhost:3001/mcp \
 - **Build System**: TypeScript compilation with Webpack bundling
 - **Release Management**: Conventional changelog with release-it
 
-## Planned Features (Roadmap)
+## Implemented Features
 
-### Phase 2: MCP Server Process Management (Ready for Implementation)
-- **Process Lifecycle**: Spawn, monitor, and terminate MCP server processes with nsjail
-- **stdio Communication**: JSON-RPC communication with local MCP servers
-- **HTTP Proxy**: Reverse proxy for external MCP server endpoints (already working)
-- **Health Monitoring**: Process health checks and automatic restart
-- **Resource Limits**: 100MB RAM, 60s CPU, 50 processes per server (via nsjail)
+### Phase 2: MCP Server Process Management ✅ COMPLETED
+- **Process Lifecycle**: Spawn, monitor, auto-restart (max 3), and terminate MCP servers
+- **stdio Communication**: Full JSON-RPC 2.0 protocol over stdin/stdout
+- **HTTP Proxy**: Reverse proxy for external MCP server endpoints ✅ working
+- **Health Monitoring**: Process crash detection with auto-restart
+- **Resource Limits**: nsjail with 100MB RAM, 60s CPU, 50 processes (production Linux)
+- **Tool Discovery**: Automatic tool caching from both HTTP and stdio servers
+- **Team-Grouped Heartbeat**: processes_by_team reporting every 30 seconds
 
 ### Phase 3: Team Isolation (Infrastructure Ready)
 - **nsjail Sandboxing**: Complete process isolation with built-in resource limits
@@ -298,8 +302,3 @@ When contributing to satellite development:
 5. **Consider Enterprise**: Design features with team isolation and security in mind
 6. **MCP Compliance**: Ensure JSON-RPC 2.0 protocol compliance
 
-## Next Steps
-
-The satellite service has completed Phase 1 (MCP Transport Implementation) and is ready for Phase 2 development. The next major milestone is implementing MCP server process management, which will enable the core satellite functionality of managing MCP servers on behalf of teams.
-
-For detailed implementation guidance, see the architecture and MCP transport documentation linked above.
