Add Satellite Event System documentation and event emission details
- Introduced comprehensive documentation for the Satellite Events System, detailing real-time event processing from satellites to the backend.
- Added sections on event flow, architecture overview, event types, batching strategy, error handling, and integration points.
- Documented specific event types related to MCP server lifecycle, client connections, tool discovery, and configuration management.
- Included guidelines for creating new event handlers and best practices for event emission.
- Enhanced the existing process management documentation with event emission details for operational visibility.

--- a/docs/development/backend/events.mdx
+++ b/docs/development/backend/events.mdx
@@ -7,6 +7,8 @@ description: Type-safe event system for decoupled communication between core sys
 
 The Global Event Bus enables decoupled communication between core systems and plugins through a type-safe event system. Core systems emit events when important actions occur, and plugins can react without direct coupling to business logic.
 
+**Note**: This documentation covers the **internal backend event bus** for plugin communication. If you're looking for the **satellite events system** (incoming events from satellites), see [Satellite Events](/development/backend/satellite-events).
+
 ## Overview
 
 Key features:
