--- a/docs/development/backend/index.mdx
+++ b/docs/development/backend/index.mdx
@@ -112,6 +112,14 @@ The development server starts at `http://localhost:3000` with API documentation 
   >
     Database-backed job processing system with persistent storage, automatic retries, and rate limiting for long-running background tasks.
   </Card>
+  
+  <Card 
+    icon={<Terminal />} 
+    href="/deploystack/development/backend/satellite-events" 
+    title="Satellite Events"
+  >
+    Real-time event processing from satellites with convention-based handlers routing to business tables for operational visibility.
+  </Card>
 </Cards>
 
 ## Project Structure
