--- a/docs/development/backend/satellite-communication.mdx
+++ b/docs/development/backend/satellite-communication.mdx
@@ -71,6 +71,26 @@ Satellites use **outbound-only HTTPS polling** to communicate with the backend, 
 └─────────────────┘    Command Response   └─────────────────┘
 ```
 
+### Communication Channels
+
+The system uses three distinct communication patterns:
+
+**Command Polling (Backend → Satellite)**:
+- Backend creates commands, satellites poll and execute
+- Adaptive intervals: 2-60 seconds based on priority
+- Used for: MCP server configuration, process management
+
+**Heartbeat (Satellite → Backend, Periodic)**:
+- Satellites report status every 30 seconds
+- Contains: System metrics, process counts, resource usage
+- Used for: Health monitoring, capacity planning
+
+**Events (Satellite → Backend, Immediate)**:
+- Satellites emit events when actions occur, batched every 3 seconds
+- Contains: Point-in-time occurrences with precise timestamps
+- Used for: Real-time UI updates, audit trails, user notifications
+- See [Satellite Events](/development/backend/satellite-events) for detailed implementation
+
 ### Dual Deployment Models
 
 **Global Satellites**: Cloud-hosted by DeployStack team
@@ -474,6 +494,7 @@ For detailed API endpoints, request/response formats, and authentication pattern
 
 For detailed satellite architecture and implementation:
 
+- [Satellite Events](/development/backend/satellite-events) - Real-time event processing system
 - [API Security](/development/backend/api-security) - Security patterns and authorization  
 - [Database Management](/development/backend/database) - Schema and data management
 - [OAuth2 Server](/development/backend/oauth2-server) - OAuth2 implementation details
